update picture placement

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 go to work every day to suffer the inadequacies of software they are required to use, or the lack of software
                 altogether. My passion lies with combatting this problem.">
     <meta name="keywords" content="">
-    <meta property="og:image" content="prof3.jpg">
+    <meta property="og:image" content="prof5.png">
     <meta property="og:title" content="Benjamin D. Sammons - Software Engineer">
     <meta property="og:site_name" content="sammons.io">
     <meta property="og:type content=" Personal Website">
@@ -31,7 +31,7 @@
     <meta property="twitter:description" content="Many people
                 go to work every day to suffer the inadequacies of software they are required to use, or the lack of software
                 altogether. My passion lies with combatting this problem.">
-    <meta property="twitter:image" content="prof3.jpg">
+    <meta property="twitter:image" content="prof5.png">
     <meta name="pubdate" content="20181101">
     <style defer>
         :root {
@@ -91,11 +91,12 @@
         }
 
         .portrait-container {
-            width: 150px;
-            height: 150px;
+            width: 175px;
+            height: 175px;
             margin: 50px auto;
-            background-image: url("prof3.jpg");
+            background-image: url("prof5.png");
             background-size: cover;
+            background-position: 2px -20px;
             border-radius: 50%;
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
@@ -233,7 +234,7 @@
     </div>
     <div class="content">
         <div class="portrait-container">
-            <!--<img src="prof.jpg" alt="portrait" class="portrait">-->
+            <!--<img src="prof5.png" alt="portrait" class="portrait">-->
         </div>
         <div class="hello">
             <h2>Hello!</h2>
