rephrase amazon experience

--- a/resume.html
+++ b/resume.html
@@ -202,7 +202,8 @@
         <h4 class="company">Amazon</h4>
         <p class="time">July 2021 - Present (SDE III) </p>
         <p class="time">July 2019 - July 2021 (SDE II)</p>
-        <p class="description">E-Commerce Giant. Architected and led teams to deliver recognition and engagement products worth over $50 million in annual recurring returns. Invented new agentic GenAI offerings internally providing scientifically proven productivity boosts.</p>
+        <p class="description">
+          E-Commerce Giant. Architected and led global-scale recognition, engagement, and authentication platforms, driving $75M+ in annual impact through productivity gains and retention improvements. Invented and deployed GenAI solutions, boosting engineering output by 15%+ for hundreds of devs. Led high-priority authentication initiatives, including OIDC migration and contractor onboarding, securing 10K+ logins/day while reducing failures by 2,000+/month.</p>
       </div>
       <div class="right">
         <p class="position">Software Development Engineer III</p>
