add updated pdf and update link

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <h3 class="name">Ben Sammons</h3>
         <ul class="links">
             <li><a href="https://github.com/sammons">Code</a></li>
-            <li><a href="https://sammons.io/resume-2025.pdf">Resume</a></li>
+            <li><a href="https://sammons.io/sammons-resume-2025-v2.pdf">Resume</a></li>
             <li><a href="mailto:ben+web@sammons.io">Email</a></li>
             <li><a href="https://www.linkedin.com/in/benjamin-sammons-228bb159/">LinkedIn</a></li>
         </ul>
