make image smaller

--- a/resume.html
+++ b/resume.html
@@ -180,7 +180,7 @@
   <h1 style="width: 100%;">
     Benjamin D. Sammons
     <div class="pic">
-      <img src="./prof5.png" width="90"></img>
+      <img src="./prof5-small.png" width="90"></img>
     </div>
   </h1>
 
